--- a/costAccounting.html
+++ b/costAccounting.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="all">
+      <div class='bot' >
       <h1>Учет моих расходов</h1>
       <div id="inp">
         <div id="where">
@@ -20,6 +21,7 @@
         <button onclick="onClickButton()">Добавить</button>
       </div>
       <div class="sum"><p>Итого:</p><p id='sumValue'>0</p><p>р.</p></div>
+      </div>
       <div id="content-page"></div>
       <p id="niz"></p>
     </div>
